turing/apps/atcr-hold/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atcr-hold
  namespace: atcr-hold
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: hold.thoughtless.eu
    external-dns.alpha.kubernetes.io/target: "58c15097-f3b2-4ff7-a676-21bbeeea39d7.cfargotunnel.com"
spec:
  ingressClassName: traefik
  rules:
    - host: hold.thoughtless.eu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atcr-hold
                port:
                  number: 8080
  tls:
    - hosts:
        - hold.thoughtless.eu
      secretName: atcr-hold-tls
